fix overflow on flickity container, begin positioning quick update meta data

--- a/app/styles/layout/_quick-update.scss
+++ b/app/styles/layout/_quick-update.scss
@@ -5,6 +5,7 @@
   top: 50px;
   height: 180px;
   background: #464C5A;
+  overflow: hidden;
 }
 
 .flickity-viewport {
@@ -23,11 +24,67 @@
     background: #677086;
     overflow: hidden;
     opacity: .5;
+    text-align: left;
     &.is-selected {
       opacity: 1;
     }
     img {
       width: 100%;
     }
+    &:hover {
+      .overlay-panel {
+        background-position: 0 100%;
+      }
+    }
+  }
+  .overlay-panel {
+    background-image: -webkit-linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.8) 50%, rgba(0,0,0,0.8) 100%);
+    background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.8) 50%, rgba(0,0,0,0.8) 100%);
+    background-size: auto 200%;
+    background-repeat: repeat-x;
+    border-radius: 3px;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 5px 10px;
+    transition: background-position .3s ease-in-out;
+  }
+}
+
+.quick-update-title-block {
+  text-align: left;
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+  right: 15px;
+  color: $white;
+  .series-title {
+    margin-bottom: 0;
+  }
+}
+
+.flickity-prev-next-button {
+  top: 90px;
+  height: 180px;
+  bottom: 0;
+  border-radius: 0;
+  background: rgba(0,0,0,1);
+  transition: all .2s ease-in;
+  opacity: .3;
+  .arrow {
+    fill: $white;
+  }
+  &:hover {
+    background: rgba(0,0,0,1);
+    opacity: .6;
+  }
+  &.next {
+    right: 0;
+  }
+  &.previous {
+    left: 0;
   }
 }
